guides/pd-disaggregation/manifests.yaml
---
# Source: llm-d-infra/templates/gateway-infrastructure/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: infra-pd-inference-gateway
  labels:
    app.kubernetes.io/name: llm-d-infra
    helm.sh/chart: llm-d-infra-v1.3.3
    app.kubernetes.io/instance: infra-pd
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: "v0.3.0"
    app.kubernetes.io/gateway: infra-pd-inference-gateway
    app.kubernetes.io/component: inference-gateway
    istio.io/enable-inference-extproc: "true"
  annotations:
spec:
  gatewayClassName: "istio"
  listeners:
    - port: 80
      protocol: HTTP
      name: default
      allowedRoutes:
        namespaces:
          from: All
  infrastructure:
    parametersRef:
      name: infra-pd-inference-gateway
      group: ""
      kind: ConfigMap
---
# Source: inferencepool/templates/epp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gaie-pd-epp
  namespace: llm-d-pd
  labels:
    app.kubernetes.io/name: gaie-pd-epp
    app.kubernetes.io/version: "v1.0.1-rc.1"
spec:
  selector:
    inferencepool: gaie-pd-epp
  ports:
    - name: grpc-ext-proc
      protocol: TCP
      port: 9002
    - name: http-metrics
      protocol: TCP
      port: 9090
  type: ClusterIP
---
# Source: inferencepool/templates/epp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gaie-pd-epp
  namespace: llm-d-pd
  labels:
    app.kubernetes.io/name: gaie-pd-epp
    app.kubernetes.io/version: "v1.0.1-rc.1"
spec:
  replicas: 1
  strategy:
    # The current recommended EPP deployment pattern is to have a single active replica. This ensures 
    # optimal performance of the stateful operations such prefix cache aware scorer.
    # The Recreate strategy the old replica is killed immediately, and allow the new replica(s) to 
    # quickly take over. This is particularly important in the high availability set up with leader
    # election, as the rolling update strategy would prevent the old leader being killed because 
    # otherwise the maxUnavailable would be 100%.
    type: Recreate
  selector:
    matchLabels:
      inferencepool: gaie-pd-epp
  template:
    metadata:
      labels:
        inferencepool: gaie-pd-epp
    spec:
      serviceAccountName: gaie-pd-epp
      # Conservatively, this timeout should mirror the longest grace period of the pods within the pool
      terminationGracePeriodSeconds: 130
      containers:
      - name: epp
        image: ghcr.io/llm-d/llm-d-inference-scheduler:v0.3.0
        imagePullPolicy: Always
        args:
        - --pool-name
        - gaie-pd
        - --pool-namespace
        - llm-d-pd
        - --pool-group
        - "inference.networking.x-k8s.io"
        - --zap-encoder
        - "json"
        - --config-file
        - "/config/pd-config.yaml"
        # Pass additional flags via the inferenceExtension.flags field in values.yaml.
        - "--v"
        - "1"
        - "--pool-group"
        - "inference.networking.x-k8s.io"
        ports:
        - name: grpc
          containerPort: 9002
        - name: grpc-health
          containerPort: 9003
        - name: metrics
          containerPort: 9090
        livenessProbe:
          grpc:
            port: 9003
            service: inference-extension
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          grpc:
            port: 9003
            service: inference-extension
          periodSeconds: 2

        volumeMounts:
        - name: plugins-config-volume
          mountPath: "/config"
      volumes:
      - name: plugins-config-volume
        configMap:
          name: gaie-pd-epp
---
# Source: inferencepool/templates/istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: gaie-pd-epp
spec:
  host: gaie-pd-epp.llm-d-pd.svc.cluster.local
  trafficPolicy:
    tls:
      mode: SIMPLE
      insecureSkipVerify: true
    connectionPool:
      http:
        http1MaxPendingRequests: 256000
        http2MaxRequests: 256000
        idleTimeout: 900s
        maxRequestsPerConnection: 256000
      tcp:
        connectTimeout: 900s
        maxConnectionDuration: 1800s
        maxConnections: 256000
